pxc/tests/test_03_interface/interf_inh4.px
namespace interf_inh4;
import common -;

threaded interface ifoo {
  function void foo();
}

interface ibar <ifoo> { // error: threading attribute
  function void bar();
}

function void t1()
{
}

t1();
